@@ -1,1 +1,1 @@
-#define KVT_VERSION "kvt-0.14.9"
+#define KVT_VERSION "kvt-0.14.11"
